--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "stripe": "^16.6.0"
+    "stripe": "^16.6.0",
     "node-fetch": "^3.3.2"
   }
 }
