--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "guarros-extremenos-backend",
+  "name": "guarros-extremenos-api",
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "dev": "node server.js",
     "start": "node server.js"
   },
   "dependencies": {
@@ -12,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "stripe": "^16.6.0",
-    "node-fetch": "^3.3.2"
+    "body-parser": "^1.20.2",
+    "morgan": "^1.10.0"
   }
 }
