--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
